GearsetPOC/force-app/main/default/objects/Hotel__c/fields/Hotel_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Ext_Id__c</fullName>
    <description>Used by the API to perform the upsert call.</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id for Sqills.</inlineHelpText>
    <label>Hotel Api Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>