GearsetPOC/force-app/main/default/objects/Hotel__c/fields/Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Margin_Amount__c</fullName>
    <label>Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>