GearsetPOC/force-app/main/default/objects/Hotel__c/fields/Product_Amount__c.field-meta.xml
<CustomField>
    <fullName>Product_Amount__c</fullName>
    <label>Product Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>