GearsetPOC/force-app/main/default/objects/Hotel__c/fields/Product_Reference__c.field-meta.xml
<CustomField>
    <fullName>Product_Reference__c</fullName>
    <label>Product Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>