GearsetPOC/force-app/main/default/objects/Hotel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hotel_Name__c</columns>
    <columns>Duration__c</columns>
    <columns>Code__c</columns>
    <columns>Arrival_Date__c</columns>
    <columns>Product_Reference__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>